--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+:root{
+    --primarycolor: #FF5500;
+    --scolor: #FBBD22;
+    --tcolor: #004921;
+    --bcolor: #FFF0E0;
+    --fcolor:#FFBBA7 ;
+    padding: 8%;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -6,4 +15,11 @@
 
 html{
     font-family: "Amiri", serif;
+    font-size: 16px;
+}
+
+.home{
+     width: 100%;
+     height: 100vh;
+     background-color: #FFF0E0;
 }
