--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     --tcolor: #004921;
     --bcolor: #FFF0E0;
     --fcolor:#FFBBA7 ;
-    padding: 8%;
+    
 }
 
 *{
@@ -19,7 +19,7 @@ html{
 }
 
 .home{
-     width: 100vh;
+     width: 100%;
      height: 100vh;
      background-color: var(--bcolor);
 }
