--- a/css/style.css
+++ b/css/style.css
@@ -22,5 +22,9 @@ html{
 .home{
      width: 100%;
      height: 100vh;
-     background-color: var(--bcolor);
+     background-color: #FBBD22 ;
+}
+
+span{
+    color: #004921;
 }
