--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,13 @@
 html{
     font-family: "Amiri", serif;
     font-size: 16px;
-    color: #FF5500;
+    color: #FBBD22;
 }
 
 .home{
      width: 100%;
      height: 100vh;
-     background-color: #FBBD22 ;
+     background-color: #FFBBA7;
 }
 
 span{
