--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ html{
 .home{
      width: 100%;
      height: 100vh;
-     background-color: #FFBBA7;
+     background-color: #FFF0E0;
 }
 
 span{
