--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 html{
     font-family: "Amiri", serif;
-    font-size: 20px;
+    font-size: 16px;
     color: #FBBD22;
     text-align: right;
 }
@@ -30,3 +30,13 @@ span{
     color: #004921;
 }
 
+h2{
+    font-size: 25px;
+
+}
+nav{
+    
+    padding-top: 2.2rem;
+    padding-left: 8%;
+    padding-right: 8%;
+}
