--- a/css/style.css
+++ b/css/style.css
@@ -16,22 +16,22 @@
 html{
     font-family: "Amiri", serif;
     font-size: 16px;
-    color: #FBBD22;
+    color: var(--scolor);
     text-align: right;
 }
 
 .home{
      width: 100%;
      height: 100vh;
-     background-color: #FFF0E0;
+     background-color: var(--bcolor);
 }
 
 span{
-    color: #004921;
+    color: var(--tcolor);
 }
 
 h2{
-    font-size: 25px;
+    font-size: 30px;
     cursor: pointer;
 }
 nav{
@@ -39,4 +39,7 @@ nav{
     padding-top: 2.2rem;
     padding-left: 8%;
     padding-right: 8%;
+    display: flex;
+    justify-content: baseline;
+    align-items: center;
 }
