--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,6 @@ nav{
     padding-left: 8%;
     padding-right: 8%;
     display: flex;
-    justify-content: baseline;
+    justify-content: space-between;
     align-items: center;
 }
