--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html{
     font-family: "Amiri", serif;
     font-size: 16px;
     color: var(--scolor);
-    text-align: right;
+    text-align: left;
 }
 
 .home{
@@ -47,4 +47,5 @@ nav{
 nav ul li {
     list-style-type: none;
     display: inline;
+
 }
