--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html{
     font-family: "Amiri", serif;
     font-size: 16px;
     color: var(--scolor);
-    text-align: left;
+    text-align: right;
 }
 
 .home{
@@ -33,6 +33,7 @@ span{
 h2{
     font-size: 30px;
     cursor: pointer;
+    text-align: right;
 }
 nav{
     
@@ -42,6 +43,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    text-align: right;
 }
 
 nav ul li {
