--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,9 @@ nav ul li {
     display: inline;
     margin: 0.8rem 1rem;
 }
+nav ul li a{
+    color: var(--primarycolor);
+    text-decoration: none;
+    
+
+}
