--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ html{
 }
 
 span{
-    color: var(--tcolor);
+    color: var(--primarycolor);
     font-family: "Bona Nova SC", serif;
 }
 
@@ -53,7 +53,7 @@ nav ul li {
     margin: 0.8rem 1rem;
 }
 nav ul li a{
-    color: var(--primarycolor);
+    color: var(--scolor);
     text-decoration: none;
 
 }
