--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ html{
 
 span{
     color: var(--primarycolor);
-    font-family: "Bona Nova SC", serif;
+    font-family:"Baskervville SC", serif;
 }
 
 h2{
