--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ nav ul li {
 nav ul li a{
     color: var(--scolor);
     text-decoration: none;
-
+    transition: 0.4s;
 }
 nav ul li a:hover{
     color: var(--fcolor);
