--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ nav ul li {
     margin: 0.8rem 1rem;
 }
 nav ul li a{
-    color: var(--scolor);
+    color: var(--primarycolor);
     text-decoration: none;
     transition: 0.4s;
 }
