--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ html{
      width: 100%;
      height: 100vh;
      background-color: var(--bcolor);
+    display: flex;
+    flex-direction: column;
+
 }
 
 span{
@@ -61,5 +64,5 @@ nav ul li a:hover{
     color: var(--fcolor);
 }
 .contant{
-    background-color: #FFBBA7;
+flex-grow: 1;
 }
