--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ h5{
 
 .cimage{
     display: flex;
-            justify-content: flex-end; 
+            justify-content: flex-start; 
 }
 .mypic{
     width: 45%;
