--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ flex-grow: 1;
 padding: 8%;
 display: flex;
 align-items: center;
-
+justify-content: space-between;
 }
 
 h3{
@@ -92,9 +92,7 @@ h5{
 
 
 .cimage{
-    display: flex;
-    align-items: last baseline;   
-
+   
 }
 .mypic{
     width: 45%;
