--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ nav ul li {
     list-style-type: none;
     display: inline;
     margin: 0.8rem 1rem;
+    background-color: #FFBBA7;
 }
 nav ul li a{
     color: var(--primarycolor);
