--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ h2{
     
 }
 nav{
-    background: #ffbca778
+    background: #ffffff78;
     backdrop-filter: blur(10px); 
     border-radius: 15px; 
     padding-top: 0.2rem;
