--- a/css/style.css
+++ b/css/style.css
@@ -38,18 +38,12 @@ h2 {
 }
 
 nav {
-    background: rgba(255, 187, 167, 0.5); 
-    backdrop-filter: blur(10px); 
-    border-radius: 15px; 
     padding-top: 2.2rem;
     padding-left: 8%;
     padding-right: 8%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-   
-   
 }
 
 nav ul li {
@@ -92,49 +86,16 @@ h5 {
 }
 
 .textt {
-    text-align: right; 
+    position: relative;
+    bottom: 70px;
 }
 
 .cimage {
-    text-align: left; 
-    margin-right: 4%; 
+    order: -1; /* لضمان أن الصورة تأتي قبل النص في التخطيط المرن */
 }
 
 .mypic {
     width: 60%;
-    height: auto;
-}
-
-
-@media (max-width: 768px) {
-    .contant {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .cimage {
-        text-align: center; 
-        margin: 0; 
-    }
-
-    .mypic {
-        width: 80%;
-    }
-}
-
-
-@media (max-width: 480px) {
-    .contant {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .cimage {
-        text-align: center; 
-        margin: 0; 
-    }
-
-    .mypic {
-        width: 100%;
-    }
+    height: 100%;
+    position: relative;
 }
