--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,36 @@ h5{
     height: 100%;
     position: relative;
 }
+
+@media (max-width: 768px) {
+    .contant {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .cimage {
+        text-align: center; 
+        margin: 0; 
+    }
+
+    .mypic {
+        width: 80%;
+    }
+}
+
+
+@media (max-width: 480px) {
+    .contant {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .cimage {
+        text-align: center; 
+        margin: 0; 
+    }
+
+    .mypic {
+        width: 100%;
+    }
+}
