--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ h5{
 
 @media (max-width: 768px) {
     .contant {
-        flex-direction: row; 
+        flex-direction: column; 
         align-items: center;
         justify-content: space-between; 
     }
@@ -119,7 +119,7 @@ h5{
     }
 
     .mypic {
-        width: 45%;
+        width: 90%;
     }
 }
 
