--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ html{
     font-family: "Amiri", serif;
     font-size: 16px;
     color: var(--scolor);
-    text-align: right;
+    text-align: left;
 }
 
 .home{
