--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     --primarycolor: #FF5500;
     --scolor: #FBBD22;
     --tcolor: #004921;
-    --bcolor: #f8edcd;
+    --bcolor: #EDEDED;
     --fcolor: #FFBBA7;
 }
 
