--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root {
-    --primarycolor: #FF5500;
-    --scolor: #FBBD22;
-    --tcolor: #004921;
+    --primarycolor: #004D8B;
+    --scolor: #908C14;
+    --tcolor: #00A4D2;
     --bcolor: #EDEDED;
     --fcolor: #FFBBA7;
 }
