--- a/css/style.css
+++ b/css/style.css
@@ -38,14 +38,23 @@ h2{
     cursor: pointer;
     
 }
-nav{
+header .navbar{
     background-color: #ffffff9f;
+    border-bottom: 1px solid  var(--fcolor);
+    position: fixed;
+    width: 100%;
     padding-top: 1rem;
     padding-left: 8%;
     padding-right: 8%;
+    
+}
+
+header .navbar nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1100px;
+     margin: auto;
 }
 
 nav ul li {
