--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ span{
 h2{
     font-size: 1.80rem;
     cursor: pointer;
-    
+    text-align: left;
 }
 header .navbar{
     background-color: #ffffff9f;
