--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ html{
     font-family: "Amiri", serif;
     font-size: 16px;
     color: var(--scolor);
+    text-align: right;
 }
 
 .home{
@@ -24,7 +25,6 @@ html{
      background-color: var(--bcolor);
     display: flex;
     flex-direction: column;
-
 }
 
 span{
