--- a/css/style.css
+++ b/css/style.css
@@ -41,9 +41,7 @@ nav{
     border-bottom: 1px solid  var(--fcolor);
     position: fixed;
     width: 100%;
-    padding-top: 1rem;
-    padding-left: 8%;
-    padding-right: 8%;
+    padding: 1.5rem 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
