--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,9 @@ nav ul li a:hover{
 }
 .contant{
 flex-grow: 1;
-padding: 8%;
+padding: 1.5rem 2rem;
 display: flex;
 align-items: center;
-
-
 }
 
 h3{
