--- a/css/style.css
+++ b/css/style.css
@@ -92,9 +92,8 @@ h5{
 .social-icons {
     margin-top: 20px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     gap: 15px;
-    text-align: right;
 }
 
 .social-icons a {
