--- a/css/style.css
+++ b/css/style.css
@@ -134,17 +134,18 @@ h5{
 }
 .download-button {
     margin-top: 20px;
-    text-align: center;
+    text-align: right;
 }
 
 .download-button a {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 8px 15px;
     background-color: var(--primarycolor);
     color: white;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    font-size: 14px; 
 }
 
 .download-button a:hover {
