--- a/css/style.css
+++ b/css/style.css
@@ -139,17 +139,19 @@ h5{
 
 .download-button a {
     display: inline-block;
-    padding: 8px 15px;
-    background-color: var(--primarycolor);
-    color: white;
+    padding: 10px 20px;
+    background-color: transparent;
+    color: var(--primarycolor);
     text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+    border: 2px solid var(--primarycolor);
+    border-radius: 50px; 
+    transition: background-color 0.3s ease, color 0.3s ease;
     font-size: 14px; 
 }
 
 .download-button a:hover {
-    background-color: var(--scolor);
+    background-color: var(--primarycolor);
+    color: white;
 }
 .cimage{
     order: -1;
