--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ h5{
 .download-button a {
     display: inline-block;
     padding: 10px 20px;
-    background-color: var(--primarycolor);
+    background-color: var(--tcolor);
     color: white;
     text-decoration: none;
     border: none;
@@ -153,7 +153,7 @@ h5{
 }
 
 .download-button a:hover {
-    background-color: var(--scolor);
+    background-color: var(--bcolor);
 }
 
 .download-button a::before {
