--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root {
     --primarycolor: #004D8B;
     --scolor: #00A4D2;
-    --tcolor: #908C14;
+    --tcolor: #faafaf;
     --bcolor: #EDEDED;
     --fcolor: #3E0817;
 }
