--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+.ico{
+    size: 0.5rem;
+}
 html{
     font-family: "Amiri", serif;
     font-size: 16px;
