--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ nav ul li a:hover{
     color: var(--fcolor);
 }
 .contant{
-    background-color: #f9bebe;
+    background-color: #f8dfdf;
 flex-grow: 1;
 padding: 8%;
 padding-top: 10%;
