--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,10 @@ html{
 }
 
 .home{
-    background-color: #f8dfdf;
+   
      width: 100%;
      height: 100vh;
-     background-color: var(--bcolor);
+     background-color: var(--fcolor);
     display: flex;
     flex-direction: column;
 }
