--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     --primarycolor: #004D8B;
     --scolor: #00A4D2;
     --tcolor: #f9bebe;
-    --bcolor: #ccebf6;
+    --bcolor: #EDEDED;
     --fcolor: #3E0817;
 }
 
