--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ nav ul li a:hover{
 flex-grow: 1;
 padding: 8%;
 padding-top: 10%;
-
+height: 100%;
 max-width: 1000;
 display: flex;
 align-items: center;
