--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ align-items: center;
 h1{
     font-size: 3rem;
     color: var(--fcolor);
-    text-shadow: 3px 3px #13102e;
+    text-shadow: 3px 3px #13102e45;
 }
 
 
