--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,8 @@ h1 {
 }
 
 .one{
- font-size: 2rem;
- color: var(--primarycolor);
+ font-size: 1.60rem;
+ color: var(--fcolor);
 }
 .sec{
     font-size: 1.5rem;
