--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,16 @@
     box-sizing: border-box;
 }
 
+.dark-mode {
+    --primarycolor: #FFFFFF;
+    --scolor: #BBBBBB;
+    --tcolor: #DDDDDD;
+    --bcolor: #333333;
+    --fcolor: #EDEDED;
+    background-color: var(--bcolor);
+    color: var(--scolor);
+}
+
 html{
     font-family: "Amiri", serif;
     font-size: 16px;
