--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,41 @@
     box-sizing: border-box;
 }
 
-.dark-mode {
-    --primarycolor: #FFFFFF;
-    --scolor: #BBBBBB;
-    --tcolor: #DDDDDD;
-    --bcolor: #333333;
-    --fcolor: #EDEDED;
-    background-color: var(--bcolor);
-    color: var(--scolor);
+.dark-mode-toggle {
+    background-color: rgba(0, 0, 0, 0.1);
+    color: #ff69b4;
+    border: 2px solid #ff69b4;
+    border-radius: 50px;
+    padding: 10px 20px;
+    transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
+.dark-mode-toggle:hover {
+    background-color: #ff69b4;
+    color: white;
+    border-color: white;
+}
+
+.dark-mode-toggle::before {
+    content: "";
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background-color: rgba(255, 192, 203, 0.2);
+    z-index: -1;
+    transition: transform 0.5s ease;
+    transform: translate(-30%, -30%) rotate(45deg);
+}
+
+.dark-mode-toggle:hover::before {
+    transform: translate(-10%, -10%) rotate(45deg);
+}
 
 html{
     font-family: "Amiri", serif;
