--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,15 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+.dark-mode {
+    --primarycolor: #FFFFFF;
+    --scolor: #BBBBBB;
+    --tcolor: #DDDDDD;
+    --bcolor: #333333;
+    --fcolor: #EDEDED;
+    background-color: var(--bcolor);
+    color: var(--scolor);
+}
 .dark-mode-toggle {
     background-color: rgba(0, 0, 0, 0.1);
     color: #ff69b4;
