--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 .dark-mode-toggle {
     background-color: rgba(0, 0, 0, 0.1);
     color: #f0c3da;
-    border: 2px solid #ff69b4;
+    border: 2px solid #f59dc9;
     border-radius: 50px;
     padding: 10px 20px;
     transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
