--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 }
 .dark-mode-toggle {
     background-color: rgba(0, 0, 0, 0.1);
-    color: #f0c3da;
+    color: #f164ad;
     border: 2px solid #f59dc9;
     border-radius: 50px;
     padding: 10px 20px;
