--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,31 @@ nav{
     align-items: center;
 }
 
+.navbar-nav .nav-link {
+    font-family: "Amiri", serif; 
+    color: var(--primarycolor); 
+    font-size: 1.2rem; 
+    transition: color 0.3s ease;
+}
 
+.navbar-nav .nav-link:hover {
+    color: var(--fcolor); 
+}
+
+
+.navbar-nav .btn-dark {
+    font-family: "Amiri", serif; 
+    color: var(--bcolor); 
+    background-color: var(--primarycolor); 
+    border: none;
+    border-radius: 50px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.navbar-nav .btn-dark:hover {
+    background-color: var(--fcolor); 
+    color: var(--primarycolor); 
+}
 nav ul li {
     list-style-type: none;
     display: inline;
