--- a/css/style.css
+++ b/css/style.css
@@ -65,10 +65,12 @@ h1 {
 .one{
  font-size: 1.60rem;
  color: var(--fcolor);
+ font-family: "Amiri", serif; 
 }
 .sec{
     font-size: 1.5rem;
     color: var(--tcolor);
+    font-family: "Amiri", serif; 
 }
 
 nav{
@@ -122,6 +124,7 @@ text-align: center;
 
 
 h1{
+    font-family: "Amiri", serif; 
     font-size: 3rem;
     color: var(--fcolor);
     text-shadow: 3px 3px 3px rgba(0,0,0,0.2);
