--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ h1{
     text-align: right;
 }
 
-.contant.download-button a {
+.download-button a {
     display: inline-block;
     padding: 10px 20px;
     background-color: var(--tcolor);
