--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ nav{
     padding-left: 10%;
     padding-right: 10%;
     width: 100%;
+    position: fixed;
     padding: 1rem 3rem;
     display: flex;
     justify-content: space-between;
