--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ h1{
     height: 100%;
 }
 
-.about {
+.j {
     background: rgba(255, 255, 255, 0.3); 
     border-radius: 15px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
