--- a/css/style.css
+++ b/css/style.css
@@ -218,15 +218,15 @@ h1{
 
 .about p.B {
     font-family: "Amiri", serif; 
-    font-size: 1.6rem; 
-    color: var(--fcolor);
+    font-size: 3rem; 
+    color: var(--primarycolor);
 }
 
 .about p.C {
     font-family: "Amiri", serif; 
-    font-size: 1.2rem;
-    color: var(--scolor);
-    margin-top: 10px;
+    font-size: 1.5rem;
+    color: var(--tcolor);
+    margin-top: 15px;
 }
 
 @media (max-width: 768px) {
