--- a/css/style.css
+++ b/css/style.css
@@ -210,19 +210,19 @@ h1{
     text-align: left;
 }
 
-.about h1 {
+.j h1 {
     font-family: "Baskervville SC", serif; 
     font-size: 2rem; 
     color: var(--fcolor);
 }
 
-.about p.B {
+.j p.B {
     font-family: "Amiri", serif; 
     font-size: 3rem; 
     color: var(--primarycolor);
 }
 
-.about p.C {
+.j p.C {
     font-family: "Amiri", serif; 
     font-size: 1.5rem;
     color: var(--tcolor);
