--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ h1{
     background: rgba(255, 255, 255, 0.3); 
     border-radius: 15px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    padding: 20px;
+    padding: 8%;
     margin: 20px;
     backdrop-filter: blur(10px); 
     text-align: left;
