--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ h1{
     background: rgba(255, 255, 255, 0.3); 
     border-radius: 15px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    padding: 5%;
+   
     margin: 20px;
     backdrop-filter: blur(10px); 
     text-align: left;
@@ -228,6 +228,13 @@ h1{
     font-size: 1.30rem;
     color: var(--tcolor);
     margin-top: 15px;
+}
+
+.container{
+    max-width: 1100px;
+    margin: auto;
+    padding: 0 2rem;
+    
 }
 
 @media (max-width: 768px) {
