--- a/css/style.css
+++ b/css/style.css
@@ -233,8 +233,8 @@ h1{
 .container{
     max-width: 1100px;
     margin: auto;
-    padding: 0 2rem;
-    
+    padding: 2rem 2rem;
+
 }
 
 @media (max-width: 768px) {
