--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    order: 1;
 }
 
 
@@ -229,6 +230,7 @@ h1{
     color: var(--tcolor);
     margin-top: 15px;
 }
+
 
 .container{
     max-width: 1100px;
