--- a/css/style.css
+++ b/css/style.css
@@ -241,8 +241,10 @@ h1{
 
 .skills {
     padding: 2rem 1rem;
-    background-color: var(--bcolor);
-    text-align: left;
+    background-color: rgba(255, 255, 255, 0.1); 
+    backdrop-filter: blur(10px); 
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 }
 
 .skills-bars {
@@ -252,16 +254,16 @@ h1{
 }
 
 .skill-bar {
-    background-color: var(--tcolor);
-    border-radius: 25px;
-    padding: 1rem;
+    background-color: rgba(255, 255, 255, 0.2); 
+    border: 1px solid rgba(255, 182, 193, 0.7); 
+    border-radius: 25px; 
+    padding: 0.5rem;
     position: relative;
     overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .skill-progress {
-    background-color: var(--scolor);
+    background-color: #ffb6c1; 
     height: 30px;
     border-radius: 25px;
     position: absolute;
@@ -272,20 +274,22 @@ h1{
 
 .skill-name {
     font-weight: bold;
-    color: var(--primarycolor);
+    color: #ffb6c1; 
     position: relative;
     z-index: 2;
+    margin-left: 1rem;
 }
 
 .skill-percentage {
     font-weight: bold;
-    color: var(--primarycolor);
+    color: #ffb6c1; 
     position: absolute;
     right: 1rem;
     top: 50%;
     transform: translateY(-50%);
     z-index: 2;
 }
+
 
 @media (max-width: 768px) {
     .contant {
