--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,7 @@ h1{
     backdrop-filter: blur(10px); 
     border-radius: 10px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    text-align: left;
 }
 
 .skills-bars {
