--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ h1{
 
 .skill-name {
     font-weight: bold;
-    color: #ffb6c1; 
+    color: var(--fcolor); 
     position: relative;
     z-index: 2;
     margin-left: 1rem;
