--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,9 @@ h1{
     transform: translateY(-50%);
     z-index: 2;
 }
-
+ .u{
+    text-align: center;
+ }
 
 @media (max-width: 768px) {
     .contant {
