--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ h1{
     background: rgba(255, 255, 255, 0.3); 
     border-radius: 15px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-   
+    padding: 2rem;
     margin: 20px;
     backdrop-filter: blur(10px); 
     text-align: left;
@@ -322,9 +322,7 @@ h1{
     transform: translateY(-50%);
     z-index: 2;
 }
- .u{
-    text-align: center;
- }
+ 
 
 @media (max-width: 768px) {
     .contant {
