--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,10 @@ h1 {
 }
 
 nav{
+    background: rgba(255, 255, 255, 0.3); 
+    border-radius: 15px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    backdrop-filter: blur(10px); 
     background-color: var(--bcolor);
     border-bottom: 1px solid  var(--tcolor);
     padding-left: 10%;
