--- a/css/style.css
+++ b/css/style.css
@@ -209,10 +209,15 @@ h1{
     
     padding: 2rem;
     margin: 20px;
-    backdrop-filter: blur(10px); 
+    
     text-align: left;
     
 }
+/*background: rgba(255, 255, 255, 0.3); 
+    border-radius: 15px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    backdrop-filter: blur(10px); 
+    */
 
 .j h1 {
     font-family: "Baskervville SC", serif; 
