--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,9 @@ h1{
     
     padding: 2rem;
     margin: 20px;
-    
+    background: rgba(255, 255, 255, 0.3); 
+    border-radius: 15px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     text-align: left;
     
 }
