--- a/css/style.css
+++ b/css/style.css
@@ -17,26 +17,13 @@
     --tcolor: #DDDDDD;
     --bcolor: #333333;
     --fcolor: #EDEDED;
-   
-}
-
-.dark-mode .dark-mode-toggle {
-    background-color: #ffb6c1;
-    color: #333333; 
-    border: 1px solid #ffb6c1; 
-    border-radius: 25px; 
-    padding: 10px 20px; 
-    font-weight: bold;
-    text-transform: uppercase; 
-    transition: background-color 0.3s ease, color 0.3s ease; 
+    background-color: var(--bcolor);
+    color: var(--scolor);
 }
 
 
-.dark-mode .dark-mode-toggle:hover {
-    background-color: #ff9aa2; 
-    color: #ffffff; 
-    border-color: #ff9aa2; 
-}
+
+
 
 
 html{
