--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@
 }
 
 .dark-mode-toggle {
-    background-color: #ffb6c1;
-    box-shadow: #333333; 
+    background-color: var(--primarycolor);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
     color: #282424;
     border: 2px solid #ffb6c1; 
     border-radius: 25px; 
