--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,10 @@
 }
 
 .dark-mode-toggle {
-    background-color: var(--primarycolor);
+    background-color: var(--scolor);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
     color: #282424;
-    border: 2px solid #ffb6c1; 
+    border: 0.5px solid #13102e; 
     border-radius: 25px; 
     padding: 5px 5px; 
     font-size: 0.5rem; 
