--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@ h1{
     border-radius: 15px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     text-align: left;
-    
+    backdrop-filter: blur(10px);
 }
 /*background: rgba(255, 255, 255, 0.3); 
     border-radius: 15px; 
@@ -282,7 +282,7 @@ h1{
     border-radius: 10px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     text-align: left;*/
-
+    backdrop-filter: blur(10px);
     padding: 2rem;
     margin: 20px;
     background: rgba(255, 255, 255, 0.3); 
