--- a/css/style.css
+++ b/css/style.css
@@ -258,14 +258,15 @@ h1{
 .j p.B {
     font-family: "Amiri", serif; 
     font-size: 1.60rem; 
-    color: var(--primarycolor);
+    color: var(--tcolor);
 }
 
 .j p.C {
     font-family: "Amiri", serif; 
     font-size: 1.30rem;
-    color: var(--tcolor);
+    color: var(--fcolor);
     margin-top: 15px;
+
 }
 
 
